fix: dark theme

--- a/src/scss/_color.scss
+++ b/src/scss/_color.scss
@@ -30,7 +30,7 @@
   --brown-dark: #8B4513;
   --brown-light: #c08457;
   --bg-dark1: #222;
-  --txt-dark1: #f4f4f4;
+  --txt-dark1: #222;
 
   --silver: #c0c0c0;
   --silver-dark: #A9A9A9;
