--- a/src/components/front/front-edu/pages/elem-edu-dsr2023net.html
+++ b/src/components/front/front-edu/pages/elem-edu-dsr2023net.html
@@ -209,6 +209,12 @@
           <br><a href="https://youtu.be/zGsMv5Fa3kc">Lecture #4 Web application</a>          
           <br><a href="" id="dsr-lecture-4">Конспект Лекции 4</a> 
         </p>
+        
+        <p>
+          Запись лекции 5 30.10.2023
+          <br><a href="https://youtu.be/zwXRDDHY-1M">Lecture #5 Web application</a>          
+          <br><a href="" id="dsr-lecture-5">Конспект Лекции 5</a> 
+        </p>
 
       </li>
     </ul>
