feat: add books

--- a/src/components/front/front-edu/pages/dsr2023net-lecture2.html
+++ b/src/components/front/front-edu/pages/dsr2023net-lecture2.html
@@ -147,7 +147,13 @@
   </li>
   
   <li>
-    <p>Давайте быстренько по ним пройдемся. Public это неограниченный достуа. Все что вы пометили public будет видно везде, во всех сборках, во всех классах. Его можно достать, посмотреть, изменить. Protected доступен только внутри класса, который его объявил, и внутри классов наследников. Internal доступен в текущей сборке. Если вы дернули себе откуда то dll и засунули напрямую к себе в приложение, то все что там помечено internal не будет доступно в вашем классе. Потому что он из другой сборки. Protected internal это небольшое расширение видимости internal. Доступен и в производных от данного класса. Private доступен только из содержащего его класса. Private protected расширяет видимость private. Доступен также производному классу той же сборки. Производный класс из другой сборки его уже не видит.</p>
+    <p>Давайте быстренько по ним пройдемся.</p>
+    <p>Public это неограниченный достуа. Все что вы пометили public будет видно везде, во всех сборках, во всех классах. Его можно достать, посмотреть, изменить.</p> 
+    <p>Protected доступен только внутри класса, который его объявил, и внутри классов наследников. Дальше мы не можем никак его посмотреть.</p> 
+    <p>Internal доступен в текущей сборке. Если вы достали dll, подгрузили или взяли из другого проекта, и засунули к себе в приложение, то все что там помечено internal не будет доступно в вашем классе. Потому что он из другой сборки.</p> 
+    <p>Protected internal это небольшое расширение видимости internal. Доступен в текущей сборке и в производных типах от данного класса.</p> 
+    <p>Private доступен только из содержащего его класса.</p> 
+    <p>Private protected расширяет видимость private. Доступен также производному классу той же сборки. Производный класс из другой сборки его уже не видит.</p>
   </li>
 
   <li>
@@ -170,38 +176,139 @@
 
   <li>
     <h3>Вопрос: Какая разница между private protected и protected</h3>
-    <p>Private доступен только данному классу. Поле private доступно только методам, операторам, свойствам, конструктору данного класса.</p>
+    <p>Private доступен только данному классу. Например вы создали класс Dog. Его свойство private name доступно только методам, свойству, конструктору данного класса. Поле private доступно только методам, операторам, свойствам, конструктору данного класса. То есть вы не сможете написать new Dog, засунуть его в переменную и попытаться достать поле name. Потому что его оттуда уже не видно. Поэтому мы пишем слово private, когда не хотим показывать вызывающему коду поле private name. Private protected открывает это поле для всех производных класса Dog  в текущей сборке.</p>
   </li>
+
+  <li>
+    <h3>Вопрос: Почему свойства объявленные как const в классе static мы не помечаем как sttic?</h3>
+    <p>Потому что константы по умолчанию уже static. В данном случае это синонимы. Как const static.</p>
+  </li>
+
   <li>
     <h3>3. Константы и поля</h3>
+    <p>  Константа (const) – это идентификатор, значение которого никогда не меняется
+    <br>Поле – это член данных, который хранит экземпляр значимого типа или ссылку на ссылочный тип.
+    </p>
   </li>
   
-  Константа (const) – это идентификатор, значение которого никогда не меняется
-  Поле – это член данных, который хранит экземпляр значимого типа или ссылку на ссылочный тип.
-  Const (константа компиляции) и readonly (константа времени выполнения) нельзя изменить по коду. Const должна быть инициализирована во время объявления. Readonly можно объявить, а потом инициализировать в конструкторе.
-  4. Методы
-  Конструкторы – это специальные методы, позволяющие корректно инициализировать новый экземпляр типа.
-  Статические конструкторы (конструкторы типов) – это инициализаторы типа. Используются для инициализации любых статических данных или для выполнения определенного действия, которое необходимо выполнить только один раз.
-  Виртуальные методы
-  Виртуальные члены класса могут быть переопределены в классе потомке
-  За счет виртуальных членов реализуется свойство ООП – полиморфизм
-  Нельзя вызывать виртуальные члены в конструкторе.
-  Методы расширений (extensions)
-  5. Параметры
-  Параметры методов
-  По умолчанию параметры передаются по значению.
-  - Для типов значений – копируется реальное значение в новую переменную
-  - Для ссылочных типов – копируется ссылка в новую переменную
-  Ключевые слова out и ref позволяют передавать объекты по ссылке.
-  6. Свойства
-  Особенности: 
-  - в отличие от полей, можно регулировать доступ отдельно на чтение, отдельно на запись.
-  - свойства, по сути методы, могут вызывать исключения
-  - свойства нельзя передать в метод с ключевым словом ref или out.
-  7. Делегаты
-  Делегат – это тип, представляющий из себя цепочку ссылок на методы с определенными входными параметрами и типом возвращаемого значения
-  8. События
-  События – вид членов, которые можно определить в типе. Если в типе определено событие, то этот тип (или экземпляр) может уведомлять другие объекты о некоторых особых ситуациях, которые могут случиться.
+  <li>
+    Константу надо понимать как константу компиляции. Это значит, что в момент когда скомпилировался код, везде вместо имени константы будет вставлено значение константы. Это немножко оптимизирует время выполнения кода. Потому что программа не будет каждый раз искать по имени константы ее значение где-то там в памяти.
+  </li>
+
+  <li>
+    Поле это член данных, который зависит от типа. Может содержать значимый тип, ссылочный тип. Инициализируется во время выполнения. Константу никак нельзя инициализировать во время выполнения - она не изменяема. Поле мы можем инициализировать во время выполнения и потом изменить.
+  </li>
+
+  <li>
+    Чем отличается константа и поле readonly? Всем, кроме того что их нельзя изменить по коду. Константа это константа компиляции. Readonly это константа времени выполнения. Readonly поле может быть инициализировано только в конструкторе и больше нигде. И когда компилятор будет натыкаться на это поле, он будет ходить и спрашивать "а чему оно равно?" в памяти. А когда компилятор будет сталкиваться с константой, он будет видеть сразу ее значение, а не имя.
+  </li>
+
+  <li>
+    Const (константа компиляции) и readonly (константа времени выполнения) нельзя изменить по коду. Const должна быть инициализирована во время объявления. Readonly можно объявить, а потом инициализировать в конструкторе.
+  </li>
+  
+  <li>
+    <h2>4. Методы</h2>
+    <p>Конструкторы – это специальные методы, позволяющие корректно инициализировать новый экземпляр типа.</p>
+    <p>Статические конструкторы (конструкторы типов) – это инициализаторы типа. Используются для инициализации любых статических данных или для выполнения определенного действия, которое необходимо выполнить только один раз.</p>
+  </li>
+  
+  <li>Конструкторы это тоже методы. Методы, которые инициализируют экземпляры. Когда мы пишем myClass = new, то создаем конструктор, который будет инициализировать экземпляр.</li>
+
+  <li>Статические конструкторы это методы, которые инициализируют типы. Служат, в основном, для инициализации статических полей. Это редкое явления, но оно есть. Мы не знаем когда будет вызван статический конструктор, но он обязательно будет вызван до того как мы обратимся к статическим членам. И мы не можем его контролировать. У статического конструктора нельзя поставить модификатор public и его нельзя вызвать извне. И он не может иметь параметры, потому что вызывает средой выполнения. </li>
+  
+  <li>
+    <h2>Виртуальные методы</h2>
+    <p>Виртуальные члены класса могут быть переопределены в классе потомке
+    <br>За счет виртуальных членов реализуется свойство ООП – полиморфизм
+    </p>
+  </li>
+  
+  <li>
+    С помощью ключевого слова virtual в базовом классе помечается метод, который может быть переопределен в классе наследнике. С помощью ключевого слова override в классе наследнике помечаем метод, который мы в нем переопределяем. Это важный механизм языка си шарп, который позволяет реализовать свойство ООП - полиморфизм. Это когда класс наследник ведет себя по другому чем класс родитель.
+  </li>
+
+  <li>Нельзя вызывать виртуальные члены в конструкторе. Потому что есть порядок вывполнения конструкторов при инициализации объектов. Когда мы вызываем конструктор наследника, то вначале вызовется конструктор базового класса и только потом конструктор наследника. Здесь неявным образом вызывается конструктор базового класса.</li>
+  
+  <li>
+    <h2>Методы расширений (extensions)</h2>
+  </li>
+  
+  <li>
+    Важный механизм языка си шарп - методы расширений. Представим что у нас есть класс public class Student. И у него есть свойства public int Id, public string FirstName, public string LastName. И пусть нам нужно определить метод public string FullName который конкатенирует FirstName и LastName. Но что, если нам не хочется изменять наш готовый класс Student? Для этого используют механизм расширений. Мы объявляем статический класс public static class StudentExtensions и в этом классе объявляем статический метод, который делает то что нам нужно. public static string FullName(this Student student) => $"{FirstName} {LastName}"; И теперь мы можем создать экземпляр класса var student = new Student() и вызвать у него этот метод var fullname = student.FullName();
+  </li>
+
+  <li>
+    Методы расширений могут иметь не только один параметр, помеченый ключевым словом this. Здесь можно много разных параметров передавать. Главное, что это должен мыть статический метод в статическом класси и первым параметром передается экземпляр того класса, для которого пишется этот метод расширения.
+  </li>
+
+  <li>
+    Мы постараемся вам все дать за две лекции. Цель лекций дать вам больше практических знаний, чем углубляться во все сложности языка и конструкций. Все что будет рассказано на этих двух лекциях это больше практическое. Если кто-то уже писал на дотнете, то вы уже сталкивались с методами расширения. Те же linq это методы расширений, которые лежат в отдельном статическом классе.
+  </li>
+
+  <li>
+    <h2>5. Параметры</h2>
+  </li>
+  
+  <li>
+    <h2>Параметры методов</h2>
+    <p>По умолчанию параметры передаются по значению.
+    <br>- Для типов значений – копируется реальное значение в новую переменную
+    <br>- Для ссылочных типов – копируется ссылка в новую переменную
+    <br>Ключевые слова out и ref позволяют передавать объекты по ссылке.
+    </p>
+  </li>
+  
+  <li>
+    Поговорим про параметры методов. Все параметры передаются в методы по-умолчанию по значению. Для типов значения, значение будет скопировано в новую переменную. Для ссылочных типов будет скопирована ссылка в новую переменную. Чтобы передать параметры по ссылке нужно использовать ключевые слова out и ref.
+  </li>
+
+  <li>
+    Посмотрим как это работает. Пусть у нас есть метод, который увеличивает два числа на 1.
+    <code>
+      public static void Increase(int a, ref int b) {
+      <br>  a++;
+      <br>  b++;
+      <br>}
+    </code>
+    Первый параметр передается по значению, второй - по ссылке. При этом первая переменная изменится только внутри этого метода. Первая переменная копируется и изменится значение только в скопированной переменной. А вторая переменная изменится и внутри метода и снаружи. У второй переменной скопируется адрес на ее значение. Изменится значение в адресе, на который указывает и скопированная переменная и переданная переменная.
+  </li>
+
+  <li>
+    Нужно ли для ссылочных переменных ключевое слово ref? Если мы передадим в метод два объекта типа Student и попытаемся изменить им имя. То ссылочные типы скопируются в новые переменный. В первой переменной мы поменяем значение и оно также изменится для переданной переменной. Во вторую переменную мы запишем новый объект типа Student и эта переменная будет уже ссылваться на другую область памяти в куче, где лежит этот новый объект. А вторая переданная переменная никак не изменится. Но если мы хотим чтобы новый экземпляр записался в переданную переменную, то надо ее передавать в метод с ключевым словом ref. То есть для изменения свойств объекта можно передавать без слова ref. Но если надо изменить весь объект целиком, то нужно слово ref.
+  </li>
+
+  <li>Вопрос: Какое отличие ref от out? Переменная передаваемая через ref должна быть инициализирована до передачи в метод. Переменная передаваемая через out должна быть инициализирована перед выходом из метода.</li>
+
+  <li>
+    <h2>6. Свойства</h2>
+  </li>
+  
+  <li>Свойства помогают реализовать механизм ООП - инкапсуляция. Мы можем регулировать доступ к полю. Мы можем создать приватное свойство и установить к нему геттер и сеттер для доступа к нему. Например у нас есть закрытое свойство private string _name. И есть свойство public string Name с геттером, который возвращает значение этого свойства и сеттером, который устанавливает значение этого свойства. Из вызывающего кода мы не можем обратиться к молю _name. Но можем обратиться к свойству Name. В методе set можно установить проверку что имя не пустое.</li>
+
+  <li>Все свойства это пара методов public uint Age { get; set; }. При этом будет сгенерировано закрытое поле и два метода для работы с ним. get и set могут иметь различные модификторы доступа. Мы можем написать Age { get; protected set; }. В этом случае get будет доступен всем, а set будет доступен только классам наследникам.</li>
+
+  <li>
+    <h2>Особенности:</h2>
+    <p>- в отличие от полей, можно регулировать доступ отдельно на чтение, отдельно на запись.
+    <br>- свойства, по сути методы, могут вызывать исключения
+    <br>- свойства нельзя передать в метод с ключевым словом ref или out.
+    </p>
+  </li>
+  
+  <li>
+    <h2>7. Делегаты</h2>
+    <p>Делегат – это тип, представляющий из себя цепочку ссылок на методы с определенными входными параметрами и типом возвращаемого значения</p>
+  </li>
+  
+  <li>Делегат - это сигнатура метода, которая позволяет использовать другой метод вместо него. Когда создаем что-то с ключевым словом delegate, то компилятор это разворачивает в класс, экземпляр которого будет содержать в себе цепочку. Когда мы пишем delegate, то мы создаем новый тип. И этот тип хранит в себе ссылки на методы.</li>
+  
+  <li>
+    <h2>8. События</h2>
+    <p>События – вид членов, которые можно определить в типе. Если в типе определено событие, то этот тип (или экземпляр) может уведомлять другие объекты о некоторых особых ситуациях, которые могут случиться.</p>
+  </li>
+  
+  
   9. Обобщения (Generic)
   Обобщения – это еще один механизм, позволяющий многократно использовать универсальный код.
   Ограничения обобщений
